recursor: add with-hint-file configure flag
This fixes part of #3530. This option will allow downstream distro's to
load their root hints from disk by default.

--- a/pdns/recursordist/configure.ac
+++ b/pdns/recursordist/configure.ac
@@ -116,6 +116,7 @@ AS_IF([test "x$enable_hardening" != "xno"], [
 PDNS_ENABLE_SANITIZERS
 PDNS_ENABLE_MALLOC_TRACE
 PDNS_CHECK_PANDOC
+PDNS_WITH_HINTFILE
 
 AC_SUBST(LIBS)
 
