Add a guessZoneSemantics() function
This function tries to figure out the the DNSSEC zone semantics based on
a bunch of DNSResourceRecords. Hook this function up to the incoming
AXFR functionality.

--- a/pdns/Makefile.am
+++ b/pdns/Makefile.am
@@ -148,7 +148,7 @@ pdns_server_SOURCES = \
 	dnsproxy.cc dnsproxy.hh \
 	dnsrecords.cc dnsrecords.hh \
 	dnssecinfra.cc dnssecinfra.hh \
-	dnsseckeeper.hh \
+	dnsseckeeper.hh dnsseckeeper.cc \
 	dnssecsigner.cc \
 	dnswriter.cc \
 	dynhandler.cc dynhandler.hh \
