Refactor the validator to a class
The new DNSSECValidator is similar to SyncRes (i.e. single entry point).
All validation logic has been moved from validate-recursor into this
class.

Other fixes:
  * hook up to the trace-regex, closing #4362
  * The record oracle is decoupled from the DNSSECValidator
    * The constructor allows passing a DNSRecordOracle derived instance,
      which could be used for unit tests
    * This oracle is a member in the class

--- a/pdns/recursordist/Makefile.am
+++ b/pdns/recursordist/Makefile.am
@@ -130,7 +130,8 @@ pdns_recursor_SOURCES = \
 	ueberbackend.hh \
 	unix_utility.cc \
 	utility.hh \
-	validate.cc validate.hh validate-recursor.cc validate-recursor.hh \
+	validate.cc validate.hh validate-recursor.cc validate-recursor.hh dnsrecordoracle.hh srrecordoracle.hh \
+	vstate.hh vstate.cc \
 	version.cc version.hh \
 	webserver.cc webserver.hh \
 	ws-api.cc ws-api.hh \
