Sync build-scripts with debian
Fixes #5181
Fixes #5180

--- a/build-scripts/debian-authoritative/control
+++ b/build-scripts/debian-authoritative/control
@@ -2,15 +2,47 @@ Source: pdns
 Section: net
 Priority: extra
 Standards-Version: 3.9.8
-Maintainer: PowerDNS Autobuilder <powerdns.support@powerdns.com>
-Origin: PowerDNS
-Build-Depends: debhelper (>= 9~), dh-autoreconf, dh-systemd, po-debconf, libtool, flex, bison, libmysqlclient-dev, libpq-dev, libssl-dev, libgdbm-dev, libldap2-dev, libsqlite3-dev, dpkg-dev (>= 1.17.0~), libboost-dev, libboost-serialization-dev, libboost-program-options-dev, libboost-test-dev, autotools-dev, automake, autoconf, liblua5.2-dev, pkg-config, ragel, libgmp-dev, libbotan1.10-dev, libcurl4-openssl-dev, libzmq-dev, libyaml-cpp-dev (>= 0.5), libgeoip-dev, libopendbx1-dev, libcdb-dev, unixodbc-dev (>= 2.3.1), libprotobuf-dev, protobuf-compiler @LIBSYSTEMDDEV@
-Homepage: http://www.powerdns.com/
+Maintainer: Debian DNS Packaging <pkg-dns-devel@lists.alioth.debian.org>
+Uploaders: Christian Hofstaedtler <zeha@debian.org>,
+           Marc Haber <mh+debian-packages@zugschlus.de>
+Build-Depends: autoconf,
+               automake,
+               autotools-dev,
+               bison,
+               curl,
+               debhelper (>= 9~),
+               default-libmysqlclient-dev,
+               dh-autoreconf,
+               dh-systemd,
+               dpkg-dev (>= 1.17.0~),
+               flex,
+               libboost-dev,
+               libboost-program-options-dev,
+               libboost-serialization-dev,
+               libboost-test-dev,
+               libbotan1.10-dev,
+               libcdb-dev,
+               libgeoip-dev,
+               libldap2-dev,
+               liblua5.2-dev,
+               libopendbx1-dev,
+               libpq-dev,
+               libsqlite3-dev,
+               libssl-dev,
+               libtool,
+               libyaml-cpp-dev (>= 0.5),
+               pkg-config,
+               po-debconf,
+               ragel,
+               unixodbc-dev (>= 2.3.1) @LIBSYSTEMDDEV@
+Homepage: https://www.powerdns.com/
 
 Package: pdns-server
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ucf (>= 0.28), adduser, lsb-base (>= 3.2-14)
-Replaces: pdns
+Depends: adduser,
+         ${misc:Depends},
+         ${shlibs:Depends} @MASTER_DEPENDS@
+Recommends: pdns-backend-bind
 Suggests: pdns-backend
 Description: extremely powerful and versatile nameserver
  PowerDNS is a versatile nameserver which supports a large number
@@ -19,13 +51,13 @@ Description: extremely powerful and versatile nameserver
  PowerDNS tries to emphasize speed and security.
  .
  This is the authoritative nameserver that answers questions about
- domains that it knows about. It also includes the bind backend that
- allows PowerDNS to retrieve domain info from zone files as used by
- the "bind" software.
+ domains that it knows about. You also need at least one backend installed to
+ serve data.
 
 Package: pdns-tools
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
 Replaces: pdns-server (<< 3.4.6-2)
 Breaks: pdns-server (<< 3.4.6-2)
 Description: Tools for DNS debugging by PowerDNS
@@ -37,33 +69,40 @@ Description: Tools for DNS debugging by PowerDNS
  This package contains several tools to debug DNS issues. These tools do not
  require any part of the PowerDNS server components to work.
  .
- * dnsbulktest: A resolver stress-tester
- * dnsgram: Show per 5-second statistics to study intermittent resolver issues
- * dnsreplay: Replay a pcap with DNS queries
- * dnsscan: Prints the query-type amounts in a pcap
- * dnsscope: Calculates statistics without replaying traffic
- * dnstcpbench: Perform TCP benchmarking of DNS servers
- * dnswasher: Clean a pcap of identifying IP information
- * ixplore: Explore diffs from IXFRs
- * nsec3dig: Calculate the correctness of NSEC3 proofs
- * saxfr: AXFR zones and show extra information
+   * dnsbulktest: A resolver stress-tester
+   * dnsgram: Show per 5-second statistics to study intermittent resolver issues
+   * dnsreplay: Replay a pcap with DNS queries
+   * dnsscan: Prints the query-type amounts in a pcap
+   * dnsscope: Calculates statistics without replaying traffic
+   * dnstcpbench: Perform TCP benchmarking of DNS servers
+   * dnswasher: Clean a pcap of identifying IP information
+   * ixplore: Explore diffs from IXFRs
+   * nsec3dig: Calculate the correctness of NSEC3 proofs
+   * saxfr: AXFR zones and show extra information
 
-Package: pdns-server-dbg
-Section: debug
+Package: pdns-backend-bind
 Architecture: any
-Depends: pdns-server (= ${binary:Version}), ${misc:Depends}
-Description: debugging symbols for PowerDNS
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
+Provides: pdns-backend
+Replaces: pdns-server (<< 4.0.0-2~)
+Breaks: pdns-server (<< 4.0.0-2~)
+Description: BIND backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
  of different backends ranging from simple zonefiles to relational
  databases and load balancing/failover algorithms.
  PowerDNS tries to emphasize speed and security.
  .
- This package contains debugging symbols for PowerDNS to assist in
- debugging, such as gdb. It is not required for normal operation.
+ This package contains the bind backend for the PowerDNS nameserver.
+ Zone data will be read from flat BIND-style zone files, and the list
+ of zones needs to be given in a named.conf-style file.
 
 Package: pdns-backend-pipe
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: pipe/coprocess backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -77,7 +116,9 @@ Description: pipe/coprocess backend for PowerDNS
 
 Package: pdns-backend-ldap
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: LDAP backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -89,8 +130,9 @@ Description: LDAP backend for PowerDNS
 
 Package: pdns-backend-geoip
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
-Recommends: geoip-database
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: geoip backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -98,14 +140,17 @@ Description: geoip backend for PowerDNS
  databases and load balancing/failover algorithms.
  PowerDNS tries to emphasize speed and security.
  .
- This package contains a geoipbackend for the PowerDNS nameserver. This backend
- balances the load throughout the world so that people access the
- geographically nearest available server based on the zonefile that is written
- in yaml.
+ This package contains a geoip-backend for the PowerDNS nameserver. This
+ backend balances the load throughout the world so that people access the
+ geographically nearest available server based on a zonefile written in
+ YAML.
 
 Package: pdns-backend-mysql
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ucf (>= 0.28), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
+Suggests: default-mysql-server
 Provides: pdns-backend
 Description: generic MySQL backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -118,7 +163,9 @@ Description: generic MySQL backend for PowerDNS
 
 Package: pdns-backend-odbc
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ucf (>= 0.28), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (>= ${source:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: generic UnixODBC backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -131,7 +178,10 @@ Description: generic UnixODBC backend for PowerDNS
 
 Package: pdns-backend-pgsql
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ucf (>= 0.28), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
+Suggests: postgresql
 Provides: pdns-backend
 Description: generic PostgreSQL backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -144,7 +194,9 @@ Description: generic PostgreSQL backend for PowerDNS
 
 Package: pdns-backend-sqlite3
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ucf (>= 0.28), ${shlibs:Depends}, ${misc:Depends}, sqlite3
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: sqlite 3 backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -156,7 +208,9 @@ Description: sqlite 3 backend for PowerDNS
 
 Package: pdns-backend-lua
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: Lua backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -168,7 +222,9 @@ Description: Lua backend for PowerDNS
 
 Package: pdns-backend-remote
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: remote backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -181,7 +237,9 @@ Description: remote backend for PowerDNS
 
 Package: pdns-backend-opendbx
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: OpenDBX backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -195,7 +253,9 @@ Description: OpenDBX backend for PowerDNS
 
 Package: pdns-backend-mydns
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: MyDNS compatibility backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
@@ -207,7 +267,9 @@ Description: MyDNS compatibility backend for PowerDNS
 
 Package: pdns-backend-tinydns
 Architecture: any
-Depends: pdns-server (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: pdns-server (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: pdns-backend
 Description: tinydns compatibility backend for PowerDNS
  PowerDNS is a versatile nameserver which supports a large number
