WIP: several functions to process replies from auths

--- a/pdns/recursordist/Makefile.am
+++ b/pdns/recursordist/Makefile.am
@@ -197,6 +197,7 @@ testrunner_SOURCES = \
 	namespaces.hh \
 	nsecrecords.cc \
 	pdnsexception.hh \
+	process_records.hh process_records.cc \
 	protobuf.cc protobuf.hh \
 	qtype.cc qtype.hh \
 	randomhelper.cc \
@@ -221,6 +222,7 @@ testrunner_SOURCES = \
 	test-iputils_hh.cc \
 	test-misc_hh.cc \
 	test-nmtree.cc \
+	test-process_records_cc.cc \
 	test-rcpgenerator_cc.cc \
 	test-recpacketcache_cc.cc \
 	test-syncres_cc.cc \
